--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
-# Created by .ignore support plugin (hsz.mobi)
+.idea/.gitignore
+.idea/compiler.xml
+.idea/encodings.xml
+.idea/misc.xml
+.idea/uiDesigner.xml
+.idea/vcs.xml
+ReportingWithScreenshots.iml
+target/
